--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -1474,6 +1474,66 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# TWO-PROP: difference in proportions with 95% CI (female - male)\n",
+        "import statsmodels.api as sm\n",
+        "from statsmodels.stats.proportion import confint_proportion\n",
+        "\n",
+        "cont = pd.crosstab(df_train_clean['Sex'], df_train_clean['Survived'])\n",
+        "succ_f = cont.loc['female',1]; n_f = cont.loc['female'].sum()\n",
+        "succ_m = cont.loc['male',1];   n_m = cont.loc['male'].sum()\n",
+        "\n",
+        "prop_f = succ_f / n_f\n",
+        "prop_m = succ_m / n_m\n",
+        "diff = prop_f - prop_m\n",
+        "\n",
+        "# Approx normal CI for difference\n",
+        "import math\n",
+        "se = math.sqrt(prop_f*(1-prop_f)/n_f + prop_m*(1-prop_m)/n_m)\n",
+        "z = 1.96\n",
+        "ci_lower, ci_upper = diff - z*se, diff + z*se\n",
+        "\n",
+        "print(f\"Female survival = {prop_f:.3f} ({succ_f}/{n_f}); Male survival = {prop_m:.3f} ({succ_m}/{n_m})\")\n",
+        "print(f\"Difference (female - male) = {diff:.3f}\")\n",
+        "print(f\"Approx 95% CI for difference = [{ci_lower:.3f}, {ci_upper:.3f}]\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 383
+        },
+        "id": "3NF7Y1NEt2sY",
+        "outputId": "6fe6ba4f-d217-400a-dfb3-d692300cf164"
+      },
+      "id": "3NF7Y1NEt2sY",
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ImportError",
+          "evalue": "cannot import name 'confint_proportion' from 'statsmodels.stats.proportion' (/usr/local/lib/python3.12/dist-packages/statsmodels/stats/proportion.py)",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3180703031.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# TWO-PROP: difference in proportions with 95% CI (female - male)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstatsmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapi\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mstatsmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mproportion\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mconfint_proportion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcont\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcrosstab\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_train_clean\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Sex'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_train_clean\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Survived'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mImportError\u001b[0m: cannot import name 'confint_proportion' from 'statsmodels.stats.proportion' (/usr/local/lib/python3.12/dist-packages/statsmodels/stats/proportion.py)",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "0e007687",
       "metadata": {
