--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -1425,112 +1425,72 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 29,
       "id": "ed34a276",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ed34a276",
-        "outputId": "c4a5d2e2-0baf-45c1-db6e-2938a193822c"
+        "outputId": "df01995b-d9e0-4e33-aefb-4ab73ad59ad9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Age: mean=29.188, median=26.000, mode=25.000\n",
-            "Fare: mean=32.204, median=14.454, mode=8.050\n",
+            "T-test (Welch) on survival rates (female vs male):\n",
+            "t = 18.672, p = 2.284e-61\n",
+            "Mean survival — female: 0.742, male: 0.189, diff = 0.553\n",
+            "95% CI for difference = [0.495, 0.611]\n",
+            "→ Females had significantly higher survival rate.\n",
             "\n",
-            "T-test (Welch) comparing survival rates female vs male (on 0/1):\n",
-            "t-statistic = 18.6718, p-value = 2.2836e-61\n",
-            "Survival proportion — female: 0.742, male: 0.189\n",
-            "\n",
-            "Chi-square test Pclass vs Survived: chi2=102.89, p=4.5493e-23, dof=2\n"
+            "Chi-square (Pclass vs Survived): chi2=102.89, p=4.549e-23, dof=2\n",
+            "Age: mean=29.19, median=26.00, mode=25.00\n",
+            "Fare: mean=32.20, median=14.45, mode=8.05\n"
           ]
         }
       ],
       "source": [
-        "# Means, medians, mode\n",
-        "for col in ['Age','Fare']:\n",
-        "    print(f\"{col}: mean={df_train_clean[col].mean():.3f}, median={df_train_clean[col].median():.3f}, mode={df_train_clean[col].mode().iloc[0]:.3f}\")\n",
+        "# === Statistical Comparison: Gender, Class vs Survival ===\n",
+        "from scipy import stats\n",
+        "import math\n",
         "\n",
-        "#t-test: compare survival    between males and females\n",
-        "male_surv = df_train_clean.loc[df_train_clean['Sex']=='male','Survived']\n",
-        "female_surv = df_train_clean.loc[df_train_clean['Sex']=='female','Survived']\n",
+        "# Gender difference (t-test on binary 0/1 survival)\n",
+        "male_surv = df_train_clean.loc[df_train_clean['Sex']=='male', 'Survived']\n",
+        "female_surv = df_train_clean.loc[df_train_clean['Sex']=='female', 'Survived']\n",
         "\n",
-        "ttest_res = stats.ttest_ind(female_surv, male_surv, equal_var=False)  # Welch's t-test\n",
-        "print('\\nT-test (Welch) comparing survival rates female vs male (on 0/1):')\n",
-        "print(f\"t-statistic = {ttest_res.statistic:.4f}, p-value = {ttest_res.pvalue:.4e}\")\n",
-        "\n",
-        "prop_female = female_surv.mean()\n",
-        "prop_male   = male_surv.mean()\n",
-        "print(f\"Survival proportion — female: {prop_female:.3f}, male: {prop_male:.3f}\")\n",
-        "\n",
-        " #Chi-squaree test Pclass Vs Survived.\n",
-        "cont = pd.crosstab(df_train_clean['Pclass'], df_train_clean['Survived'])\n",
-        "chi2, p, dof, ex = stats.chi2_contingency(cont)\n",
-        "print(f\"\\nChi-square test Pclass vs Survived: chi2={chi2:.2f}, p={p:.4e}, dof={dof}\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# TWO-PROP: difference in proportions with 95% CI (female - male)\n",
-        "import statsmodels.api as sm\n",
-        "from statsmodels.stats.proportion import confint_proportion\n",
-        "\n",
-        "cont = pd.crosstab(df_train_clean['Sex'], df_train_clean['Survived'])\n",
-        "succ_f = cont.loc['female',1]; n_f = cont.loc['female'].sum()\n",
-        "succ_m = cont.loc['male',1];   n_m = cont.loc['male'].sum()\n",
-        "\n",
-        "prop_f = succ_f / n_f\n",
-        "prop_m = succ_m / n_m\n",
+        "t_res = stats.ttest_ind(female_surv, male_surv, equal_var=False)\n",
+        "prop_f = female_surv.mean()\n",
+        "prop_m = male_surv.mean()\n",
         "diff = prop_f - prop_m\n",
         "\n",
-        "# Approx normal CI for difference\n",
-        "import math\n",
-        "se = math.sqrt(prop_f*(1-prop_f)/n_f + prop_m*(1-prop_m)/n_m)\n",
-        "z = 1.96\n",
-        "ci_lower, ci_upper = diff - z*se, diff + z*se\n",
+        "print(\"T-test (Welch) on survival rates (female vs male):\")\n",
+        "print(f\"t = {t_res.statistic:.3f}, p = {t_res.pvalue:.3e}\")\n",
+        "print(f\"Mean survival — female: {prop_f:.3f}, male: {prop_m:.3f}, diff = {diff:.3f}\")\n",
         "\n",
-        "print(f\"Female survival = {prop_f:.3f} ({succ_f}/{n_f}); Male survival = {prop_m:.3f} ({succ_m}/{n_m})\")\n",
-        "print(f\"Difference (female - male) = {diff:.3f}\")\n",
-        "print(f\"Approx 95% CI for difference = [{ci_lower:.3f}, {ci_upper:.3f}]\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 383
-        },
-        "id": "3NF7Y1NEt2sY",
-        "outputId": "6fe6ba4f-d217-400a-dfb3-d692300cf164"
-      },
-      "id": "3NF7Y1NEt2sY",
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ImportError",
-          "evalue": "cannot import name 'confint_proportion' from 'statsmodels.stats.proportion' (/usr/local/lib/python3.12/dist-packages/statsmodels/stats/proportion.py)",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3180703031.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# TWO-PROP: difference in proportions with 95% CI (female - male)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstatsmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapi\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mstatsmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mproportion\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mconfint_proportion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcont\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcrosstab\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_train_clean\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Sex'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_train_clean\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Survived'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mImportError\u001b[0m: cannot import name 'confint_proportion' from 'statsmodels.stats.proportion' (/usr/local/lib/python3.12/dist-packages/statsmodels/stats/proportion.py)",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
+        "# 95% CI for difference in proportions\n",
+        "n_f, n_m = len(female_surv), len(male_surv)\n",
+        "z = 1.96\n",
+        "se = math.sqrt(prop_f*(1-prop_f)/n_f + prop_m*(1-prop_m)/n_m)\n",
+        "ci_lower, ci_upper = diff - z*se, diff + z*se\n",
+        "print(f\"95% CI for difference = [{ci_lower:.3f}, {ci_upper:.3f}]\")\n",
+        "\n",
+        "if ci_lower > 0:\n",
+        "    print(\"→ Females had significantly higher survival rate.\")\n",
+        "elif ci_upper < 0:\n",
+        "    print(\"→ Males had significantly higher survival rate.\")\n",
+        "else:\n",
+        "    print(\"→ No statistically significant difference detected.\")\n",
+        "\n",
+        "# Chi-square test: Pclass vs Survived\n",
+        "cont = pd.crosstab(df_train_clean['Pclass'], df_train_clean['Survived'])\n",
+        "chi2, p, dof, ex = stats.chi2_contingency(cont)\n",
+        "print(f\"\\nChi-square (Pclass vs Survived): chi2={chi2:.2f}, p={p:.3e}, dof={dof}\")\n",
+        "\n",
+        "# Summary of central tendency for context\n",
+        "for col in ['Age','Fare']:\n",
+        "    print(f\"{col}: mean={df_train_clean[col].mean():.2f}, median={df_train_clean[col].median():.2f}, mode={df_train_clean[col].mode().iloc[0]:.2f}\")\n"
       ]
     },
     {
